added content folder

--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
 	<head>
 		<title>Assignment 1 - INFO 253 Web Architecture</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<header>
-
+			<h1>My First Assignment: Blog</h1>
 		</header>
 
-		<h1>My first assignment</h1>
+		<a href="content/8 Experiments in Motivation.md">8 Experiments in Motivation</a> </br>
+		<a href="raw_content/A Mindful Shift of Focus.md">A Mindful Shift of Focus</a> </br>
+		<a href="raw_content/How to Develop an Awesome Sense of Direction.md">How to Develop an Awesome Sense of Direction</a> </br>
+		<a href="raw_content/Training to Be a Good Writer.md">Training to Be a Good Writer</a> </br>
+		<a href="raw_content/What Productivity Systems Won't Solve.md">What Productivity Systems Won't Solve</a>
 
 		<footer>
 		
 		</footer>
+		<script src="js/script.js"></script>
 	</body>
 </html>
 	
