--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
 	</head>
 	<body>
 		<header>
-			<h1>My First Assignment: Blog</h1>
+			<a href="index.html">Home Page</a> &nbsp
+      		<a href="content/About Us.html">About Us</a> &nbsp
+      		<a href="content/Contact Us.html">Contact Us</a>
 		</header>
 
-		<a href="content/8 Experiments in Motivation.md">8 Experiments in Motivation</a> </br>
-		<a href="raw_content/A Mindful Shift of Focus.md">A Mindful Shift of Focus</a> </br>
-		<a href="raw_content/How to Develop an Awesome Sense of Direction.md">How to Develop an Awesome Sense of Direction</a> </br>
-		<a href="raw_content/Training to Be a Good Writer.md">Training to Be a Good Writer</a> </br>
-		<a href="raw_content/What Productivity Systems Won't Solve.md">What Productivity Systems Won't Solve</a>
+		<h1>My First Assignment: Blog</h1>
+		<p class = "frontPageLinks">
+			<ul>
+				<li><a href="content/8 Experiments in Motivation.html">8 Experiments in Motivation</a> </br></li>
+				<li><a href="content/A Mindful Shift of Focus.html">A Mindful Shift of Focus</a> </br></li>
+				<li><a href="content/How to Develop an Awesome Sense of Direction.html">How to Develop an Awesome Sense of Direction</a> </br></li>
+				<li><a href="content/Training to Be a Good Writer.html">Training to Be a Good Writer</a> </br></li>
+				<li><a href="content/What Productivity Systems Won't Solve.html">What Productivity Systems Won't Solve</a></li>
+			</ul>
+		</p>
 
 		<footer>
-		
+		</br></br>
+			<a href="index.html">Home Page</a> &nbsp
+			<a href="content/About Us.html">About Us</a> &nbsp
+			<a href="content/Contact Us.html">Contact Us</a> &nbsp
 		</footer>
+
 		<script src="js/script.js"></script>
 	</body>
 </html>
