completed EC part

--- a/content/A Mindful Shift of Focus.html
+++ b/content/A Mindful Shift of Focus.html
@@ -59,8 +59,11 @@
 		<p>There's another way: recognize the injustice, be mindful of your frustrations, appreciate life in the present moment to calm your frustrations... then compassionately engage with everyone else to work on righting the injustice. Have a love-driven dialogue with everyone else, rather than fear-based or anger-driven interactions. Stand up to abuse, but that doesn't mean throw a brick in anger.</p>
 		<p>I don't have the answers, and my heart goes out to all who are grieving, afraid, hurt, feeling helpless, fed up, frustrated or angry. My only hope is that in the middle of all this sorrow, we can appreciate the gift of life that we've been given, and find love for our fellow human beings despite all their flaws and messiness.</p>
 	
+		<h3>Comments Section:</h3>
+		<p><u>Previous Comments:</u></p>
+		
 		<div id = "comment2">
-
+			<body onload="previousComments()">
     	</div>
 		
 		<form id="commentForm2">
