--- a/content/Contact Us.html
+++ b/content/Contact Us.html
@@ -12,6 +12,8 @@
       <a href="Contact Us.html">Contact Us</a> &nbsp
     </header>
 
+    <h1>Contact Us</h1>
+    <p>Please fill out all fields of the Contact Us form.</p>
     <div id = "contact">
     </div>
 
