--- a/content/How to Develop an Awesome Sense of Direction.html
+++ b/content/How to Develop an Awesome Sense of Direction.html
@@ -33,8 +33,11 @@
 		<p>I find that people can develop this with practice, and it's also something to teach your kids as you travel. Let them navigate even if it takes a bit longer -- it's a great skill for them to learn. If you have a spouse, take turns navigating so one person doesn't have an underdeveloped sense of direction.</p>
 		<p>In my experience, this is a key skill for traveling, and it makes every trip so much more fun when you can really figure out a city and start to understand it like a local does. Happy wandering, my friends.</p>
 
+		<h3>Comments Section:</h3>
+		<p><u>Previous Comments:</u></p>
+		
 		<div id = "comment3">
-
+			<body onload="previousComments()">
     	</div>
 		
 		<form id="commentForm3">
