--- a/content/Training to Be a Good Writer.html
+++ b/content/Training to Be a Good Writer.html
@@ -41,8 +41,11 @@
 			<li><b>You get good by doing it a lot, and caring.</b> You'll never be perfect at it -- goodness knows I'm far from perfect -- but the only way to get better is to practice. And to care about what you're doing. Do that every day, and every step of the struggle will be an amazing one.</li>
 		</ul>
 
-		<div id = "comment4">
+		<h3>Comments Section:</h3>
+		<p><u>Previous Comments:</u></p>
 
+		<div id = "comment4">
+			<body onload="previousComments()">
     	</div>
 		
 		<form id="commentForm4">
