--- a/content/What Productivity Systems Won't Solve.html
+++ b/content/What Productivity Systems Won't Solve.html
@@ -37,8 +37,11 @@
 		<p>And in the end, not only will you be facing down the most difficult aspect of productivity, you'll be doing something good for others in the process.</p>
 		</br></br>
 
-		<div id = "comment5">
+		<h3>Comments Section:</h3>
+		<p><u>Previous Comments:</u></p>
 
+		<div id = "comment5">
+			<body onload="previousComments()">
     	</div>
 		
 		<form id="commentForm5">
