finished assignment 1 and EC

--- a/content/A Mindful Shift of Focus.html
+++ b/content/A Mindful Shift of Focus.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>A Mindful Shift of Focus</title>
 		<link rel="stylesheet" href="../css/style.css" />
 	</head>
-	<body>
+	<body onload="previousComments()">
 		<header>
-	      <a href="../index.html">Home Page</a> &nbsp
-	      <a href="About Us.html">About Us</a> &nbsp
-	      <a href="Contact Us.html">Contact Us</a>
+	      <a href="../index.html">Home Page</a> &nbsp;
+	      <a href="About%20Us.html">About Us</a> &nbsp;
+	      <a href="Contact%20Us.html">Contact Us</a>
     	</header>
 
 		<h1>A Mindful Shift of Focus</h1>
@@ -24,10 +25,10 @@
 		<p>Now notice what it is in this moment that you wish were different. What is missing from this moment that is frustrating you? <b>Frustration stems from what you don't have.</b></p>
 		<p>What do I mean by this? There's something you don't have right now, that you wish you had, and that lack of what you want is frustrating you. A few examples: </p>
 		<ul>
-			<li>My child isn't behaving the way I want her to... what I don't have is "ideal" behavior from her. (Actually, it's my ideal, not hers.)</li></br>
-			<li>My computer keeps crashing, and I'm frustrated... what I don't have is a computer that behaves ideally.</li></br>
-			<li>People are saying things online that irritate me... what I don't have is a bunch of people who agree with me or behave in the way I want.</li></br>
-			<li>Traffic backed up and stressing me out... what I don't have is a stress-free, peaceful drive home.</li></br>
+			<li>My child isn't behaving the way I want her to... what I don't have is "ideal" behavior from her. (Actually, it's my ideal, not hers.)</li>
+			<li>My computer keeps crashing, and I'm frustrated... what I don't have is a computer that behaves ideally.</li>
+			<li>People are saying things online that irritate me... what I don't have is a bunch of people who agree with me or behave in the way I want.</li>
+			<li>Traffic backed up and stressing me out... what I don't have is a stress-free, peaceful drive home.</li>
 			<li>My spouse criticized me... what I don't have is someone who thinks I'm an awesome husband right now, or their praise.</li>
 		</ul>
 		<p>Those are just examples, but in all cases, there's something that's missing that I want. Usually it's an ideal.</p>
@@ -45,10 +46,10 @@
 		<p>Unfortunately, that is usually not going to be the case. Sometimes we can force people to act the way we want, if we have power over them, but that will create a bad relationship with them, and in the end, neither person will be happy.</p>
 		<p>What I've found to work is focusing on what I can appreciate about this moment. Let's take the examples from above:</p>
 		<ul>
-			<li>I'm frustrated by my child's behavior... I can breathe, and appreciate things about this moment: my child is actually a wonderful person, who might not behave perfectly all the time (who does?), who is alive! And in my life! And I love her deeply.</li></br>
-			<li>My computer keeps crashing... I can breathe, and appreciate the fact that I have a computer at all, that all my needs are met, that I have people in my life who love me. I can appreciate the break from the computer and stretch, notice the awesome things around me.</li></br>
-			<li>People say irritating things online... I can breathe, and appreciate: I get to read amazing things online! I'm alive! People are diverse and interesting and messy, and I love humanity for that precious fact.</li></br>
-			<li>Traffic is backed up... I can breathe, and appreciate the fact that I can listen to some beautiful music in the car, or that I have some transition time between work and home when I can reflect on life, or that I have a home to come back to, or that I'm driving past some beautiful scenery.</li></br>
+			<li>I'm frustrated by my child's behavior... I can breathe, and appreciate things about this moment: my child is actually a wonderful person, who might not behave perfectly all the time (who does?), who is alive! And in my life! And I love her deeply.</li>
+			<li>My computer keeps crashing... I can breathe, and appreciate the fact that I have a computer at all, that all my needs are met, that I have people in my life who love me. I can appreciate the break from the computer and stretch, notice the awesome things around me.</li>
+			<li>People say irritating things online... I can breathe, and appreciate: I get to read amazing things online! I'm alive! People are diverse and interesting and messy, and I love humanity for that precious fact.</li>
+			<li>Traffic is backed up... I can breathe, and appreciate the fact that I can listen to some beautiful music in the car, or that I have some transition time between work and home when I can reflect on life, or that I have a home to come back to, or that I'm driving past some beautiful scenery.</li>
 			<li>My spouse criticized me... I can breathe, and appreciate: she's a great spouse, and a person with a different way of doing things, and I'm happy to have her in my life. And maybe she's frustrated herself, and could use a hug.</li>
 		</ul>
 		<p>This doesn't mean we should only "think positive thoughts"... quite the contrary, noticing our negative thoughts and staying present with them is important. We can't avoid the frustration, but we can be mindful of it, and this mindful shift to appreciation of what is can be helpful.</p>
@@ -63,7 +64,7 @@
 		<p><u>Previous Comments:</u></p>
 		
 		<div id = "comment2">
-			<body onload="previousComments()">
+			
     	</div>
 		
 		<form id="commentForm2">
@@ -73,14 +74,14 @@
         Message
         <textarea id="message" name="message" placeholder="Write message here..." style="height:100px" ></textarea>
 
-        </br>
+        <br>
         <input type="submit" value="submit">
       </form>
 	<footer>
-		</br></br>
-	    <a href="../index.html">Home Page</a> &nbsp
-	    <a href="About Us.html">About Us</a> &nbsp
-	    <a href="Contact Us.html">Contact Us</a>
+		<br><br>
+	    <a href="../index.html">Home Page</a> &nbsp;
+	    <a href="About%20Us.html">About Us</a> &nbsp;
+	    <a href="Contact%20Us.html">Contact Us</a>
 	</footer>
 	<script src="../js/script_c2.js"></script>
 	</body>
