--- a/content/About Us.html
+++ b/content/About Us.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>About Us</title>
 		<link rel="stylesheet" href="../css/style.css" />
 	</head>
 	<body>
 		<header>
-			<a href="../index.html">Home Page</a> &nbsp
-      		<a href="About Us.html">About Us</a> &nbsp
-      		<a href="Contact Us.html">Contact Us</a>
+			<a href="../index.html">Home Page</a> &nbsp;
+      		<a href="About%20Us.html">About Us</a> &nbsp;
+      		<a href="Contact%20Us.html">Contact Us</a>
 		</header>
 		<h1>About Us</h1>
 		<p>Hello, there! My name is Sophia and I am a fourth year undergraduate student at UC Berkeley!</p>
 
 		<footer>
-			</br></br>
-			<a href="../index.html">Home Page</a> &nbsp
-			<a href="About Us.html">About Us</a> &nbsp
-			<a href="Contact Us.html">Contact Us</a>
+			<br><br>
+			<a href="../index.html">Home Page</a> &nbsp;
+			<a href="About%20Us.html">About Us</a> &nbsp;
+			<a href="Contact%20Us.html">Contact Us</a>
 		</footer>
 		<script src="js/script.js"></script>
 	</body>
