--- a/content/What Productivity Systems Won't Solve.html
+++ b/content/What Productivity Systems Won't Solve.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>What Productivity Systems Won't Solve</title>
 		<link rel="stylesheet" href="../css/style.css" />
 	</head>
-	<body>
+	<body onload="previousComments()">
 		<header>
-			<a href="../index.html">Home Page</a> &nbsp
-			<a href="About Us.html">About Us</a> &nbsp
-			<a href="Contact Us.html">Contact Us</a>
+			<a href="../index.html">Home Page</a> &nbsp;
+			<a href="About%20Us.html">About Us</a> &nbsp;
+			<a href="Contact%20Us.html">Contact Us</a>
 		</header>
 
 		<h1>What Productivity Systems Won't Solve</h1>
@@ -16,8 +17,8 @@
 		<p>If you're like me, you're always looking for the perfect productivity system. Unfortunately, it doesn't exist.</p>
 		<p>The problem isn't with the productivity system — the problem is that none of them can solve a few really important (and related) problems:</p>
 		<ol>
-			<li>Procrastination</li></br>
-			<li>Fear of uncertainty</li></br>
+			<li>Procrastination</li>
+			<li>Fear of uncertainty</li>
 			<li>Fear of discomfort</li>
 		</ol>
 		<p>For example, at the top of my to-do list today is "write Zen Habits post" and "write intro to declutter course"... pretty simple, right? Two fairly straightforward tasks. But as I started this post, I went to check and respond to email, sent a message to my wife, checked on my finances, cleaned the kitchen a little. I'm super productive at the little things when I'm putting off the big tasks!</p>
@@ -27,21 +28,20 @@
 		<p>And it's so much easier to follow the path of distractions and little tasks, than to face a big important but scary task. It's easy to go to your bank's website to check your balance, check on your favorite blogs and news sites, pop open your favorite social media network, and so on. These have no barrier to entry, and always give you some reward, while difficult tasks give you negative feedback and have obstacles to getting started. Not a fair fight, huh?</p>
 		<p>So how do we deal with this? A few important methods:</p>
 		<ol>
-			<li><b>Take a step back.</b> You have to get away from the distractions and little tasks. Step away from the computer, and go outside, go for a walk, take a shower, meditate, or just sit doing nothing for one minute. That's all it takes. Step back and think about what you should be doing right now, rather than what's easiest and most tempting.</li></br>
-			<li><b>Remember who you're doing this for.</b> As you step back, think about the person who will benefit from you doing this important task. Is it a co-worker, client, customer, loved one? Is it you? How will it make their life better? Maybe it'll make something easier for them, but maybe it'll solve a real pain point or meet an important need. I've found that I procrastinate when I'm focused on my own comfort, but push through procrastination when I'm focused on helping others.</li></br>
-			<li><b>Let yourself dive into the discomfort.</b> Clear away distractions, just have what you need to do this one task, and allow yourself to be uncomfortable for a few minutes. Yes, it sucks, but it's actually not that bad once you get started. It's like diving into cold water — just dive in, don't think about it. Once you're in, relax into the discomfort, and see that it's not as bad as you feared.</li></br>
-			<li><b>Embrace the uncertainty.</b> A lot of time it's a fear of uncertainty that holds us back. We don't know how to do something, or how things will turn out, and that freaks us out a bit. We don't want to work on something like that, or even think about it. We avoid and procrastinate and rationalize. Instead, see uncertainty as a necessary part of life (who wants a life where you know how everything would turn out? super boring)... and see it as an exciting part of life, one that is filled with wonder, curiosity, learning, exploration and adventure. Instead of looking at uncertainty as a bad thing, embrace it and see if you can get good at exploring it. Like discomfort, dive in and relax into it.</li></br>
+			<li><b>Take a step back.</b> You have to get away from the distractions and little tasks. Step away from the computer, and go outside, go for a walk, take a shower, meditate, or just sit doing nothing for one minute. That's all it takes. Step back and think about what you should be doing right now, rather than what's easiest and most tempting.</li>
+			<li><b>Remember who you're doing this for.</b> As you step back, think about the person who will benefit from you doing this important task. Is it a co-worker, client, customer, loved one? Is it you? How will it make their life better? Maybe it'll make something easier for them, but maybe it'll solve a real pain point or meet an important need. I've found that I procrastinate when I'm focused on my own comfort, but push through procrastination when I'm focused on helping others.</li>
+			<li><b>Let yourself dive into the discomfort.</b> Clear away distractions, just have what you need to do this one task, and allow yourself to be uncomfortable for a few minutes. Yes, it sucks, but it's actually not that bad once you get started. It's like diving into cold water — just dive in, don't think about it. Once you're in, relax into the discomfort, and see that it's not as bad as you feared.</li>
+			<li><b>Embrace the uncertainty.</b> A lot of time it's a fear of uncertainty that holds us back. We don't know how to do something, or how things will turn out, and that freaks us out a bit. We don't want to work on something like that, or even think about it. We avoid and procrastinate and rationalize. Instead, see uncertainty as a necessary part of life (who wants a life where you know how everything would turn out? super boring)... and see it as an exciting part of life, one that is filled with wonder, curiosity, learning, exploration and adventure. Instead of looking at uncertainty as a bad thing, embrace it and see if you can get good at exploring it. Like discomfort, dive in and relax into it.</li>
 			<li><b>Do it in little bits.</b> Yes, uncertainty and discomfort can be difficult. So don't kill yourself trying to master them... just do it in small doses. Work on the task for just a few minutes, then walk around and take a break. Then sit down and focus again, relaxing into the discomfort and uncertainty. Repeat.</li>
 		</ol>
 		<p>With this kind of mindful practice, you're training yourself to get good at discomfort and uncertainty. This is a wonderful skill to get good at!</p>
 		<p>And in the end, not only will you be facing down the most difficult aspect of productivity, you'll be doing something good for others in the process.</p>
-		</br></br>
+		<br><br>
 
 		<h3>Comments Section:</h3>
 		<p><u>Previous Comments:</u></p>
 
 		<div id = "comment5">
-			<body onload="previousComments()">
     	</div>
 		
 		<form id="commentForm5">
@@ -51,13 +51,13 @@
         Message
         <textarea id="message" name="message" placeholder="Write message here..." style="height:100px" ></textarea>
 
-        </br>
+        <br>
         <input type="submit" value="submit">
       </form>
 		<footer>
-			<a href="../index.html">Home Page</a> &nbsp
-			<a href="About Us.html">About Us</a> &nbsp
-			<a href="Contact Us.html">Contact Us</a>
+			<a href="../index.html">Home Page</a> &nbsp;
+			<a href="About%20Us.html">About Us</a> &nbsp;
+			<a href="Contact%20Us.html">Contact Us</a>
 		</footer>
 		
 		<script src="../js/script_c5.js"></script>
