--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>Assignment 1 - INFO 253 Web Architecture</title>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<header>
-			<a href="index.html">Home Page</a> &nbsp
-      		<a href="content/About Us.html">About Us</a> &nbsp
-      		<a href="content/Contact Us.html">Contact Us</a>
+			<a href="index.html">Home Page</a> &nbsp;
+      		<a href="content/About%20Us.html">About Us</a> &nbsp;
+      		<a href="content/Contact%20Us.html">Contact Us</a>
 		</header>
 
 		<h1>My First Assignment: Blog</h1>
 		<p class = "frontPageLinks">
-			<ul>
-				<li><a href="content/8 Experiments in Motivation.html">8 Experiments in Motivation</a> </br></li>
-				<li><a href="content/A Mindful Shift of Focus.html">A Mindful Shift of Focus</a> </br></li>
-				<li><a href="content/How to Develop an Awesome Sense of Direction.html">How to Develop an Awesome Sense of Direction</a> </br></li>
-				<li><a href="content/Training to Be a Good Writer.html">Training to Be a Good Writer</a> </br></li>
-				<li><a href="content/What Productivity Systems Won't Solve.html">What Productivity Systems Won't Solve</a></li>
-			</ul>
-		</p>
+			<a href="content/8%20Experiments%20in%20Motivation.html">8 Experiments in Motivation</a><br>
+			<a href="content/A%20Mindful%20Shift%20of%20Focus.html">A Mindful Shift of Focus</a> <br>
+			<a href="content/How%20to%20Develop%20an%20Awesome%20Sense%20of%20Direction.html">How to Develop an Awesome Sense of Direction</a> <br>
+			<a href="content/Training%20to%20Be%20a%20Good%20Writer.html">Training to Be a Good Writer</a> <br>
+			<a href="content/What%20Productivity%20Systems%20Won't%20Solve.html">What Productivity Systems Won't Solve</a>
+			</p>
 
 		<footer>
-		</br></br>
-			<a href="index.html">Home Page</a> &nbsp
-			<a href="content/About Us.html">About Us</a> &nbsp
-			<a href="content/Contact Us.html">Contact Us</a> &nbsp
+		<br><br>
+			<a href="index.html">Home Page</a> &nbsp;
+			<a href="content/About%20Us.html">About Us</a> &nbsp;
+			<a href="content/Contact%20Us.html">Contact Us</a> &nbsp;
 		</footer>
 
 		<script src="js/script.js"></script>
