--- a/content/Contact Us.html
+++ b/content/Contact Us.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
     <title>Contact Us</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
   <body>
     <header>
-      <a href="../index.html">Home Page</a> &nbsp
-      <a href="About Us.html">About Us</a> &nbsp
-      <a href="Contact Us.html">Contact Us</a> &nbsp
+      <a href="../index.html">Home Page</a> &nbsp;
+      <a href="About%20Us.html">About Us</a> &nbsp;
+      <a href="Contact%20Us.html">Contact Us</a> &nbsp;
     </header>
 
     <h1>Contact Us</h1>
@@ -27,15 +28,15 @@
         Message
         <textarea id="message" name="message" placeholder="Write message here..." style="height:200px" ></textarea>
 
-        </br>
+        <br>
         <input type="submit" value="submit">
       </form>
 
       <footer>
-        </br></br>
-        <a href="../index.html">Home Page</a> &nbsp
-        <a href="About Us.html">About Us</a> &nbsp
-        <a href="Contact Us.html">Contact Us</a>
+        <br><br>
+        <a href="../index.html">Home Page</a> &nbsp;
+        <a href="About%20Us.html">About Us</a> &nbsp;
+        <a href="Contact%20Us.html">Contact Us</a>
       </footer>
 
     <script src="../js/script.js"></script>
